--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Tours
+    Home
 {% endblock %}
 
 {% block content %}
-    <h1>Welcome to Tours</h1>
+    <h1>Welcome to Zazaguide</h1>
 {% endblock %}
