--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Contact Us{% endblock %}
+{% block title %}
+    Contact Us
+{% endblock %}
 
 {% block content %}
-<h1>Contact Us</h1>
-<p>Feel free to reach out to us!</p>
+    <h1>Contact Us</h1>
+    <p>Feel free to reach out to us!</p>
 {% endblock %}
