added postgres for users login/signup and redis for upload handling

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
     <header>
         <div class="headernav">
             <a href="/home">
-                <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Logo">
+                <img src="{{ url_for('static', filename='logo.webp') }}" alt="Logo">
             </a>
             <nav>
                 <ul>
