--- a/templates/base.html
+++ b/templates/base.html
@@ -4,38 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+
     <style>
-        html, body, div, span, applet, object, iframe,
-        h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-        a, abbr, acronym, address, big, cite, code,
-        del, dfn, em, img, ins, kbd, q, s, samp,
-        small, strike, strong, sub, sup, tt, var,
-        b, u, i, center,
-        dl, dt, dd, ol, ul, li,
-        fieldset, form, label, legend,
-        table, caption, tbody, tfoot, thead, tr, th, td,
-        article, aside, canvas, details, embed, 
-        figure, figcaption, footer, header, hgroup, 
-        menu, nav, output, ruby, section, summary,
-        time, mark, audio, video {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            font-size: 100%;
-            font: inherit;
-            vertical-align: baseline;
-        }
         body {
-            line-height: 1.6;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f8f8f8;
             margin: 0;
             padding: 0;
         }
-        a {
-            text-decoration: none;
-            color: #000;
+
+        .container {
+            width: min(100%, 1440px);
+            margin: 40px auto;
+            padding: 40px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
         }
+
         .headernav {
             display: flex;
             justify-content: space-between;
@@ -46,55 +33,55 @@
             border-radius: 9px;
             height: 80px;
         }
+
         .headernav img {
-            width: 80px; /* Decreased logo size */
+            width: 80px;
         }
+
         nav ul {
             display: flex;
             gap: 20px;
             list-style-type: none;
         }
+
         nav ul li a {
             font-size: 15px;
             font-family: "Amazon Ember", sans-serif;
             color: black;
         }
+
         nav ul li a:hover {
             color: #ff2020;
         }
+
         .languagediv {
             display: flex;
             align-items: center;
         }
+
         .languagediv button {
             background-color: white;
             border: 1px solid #d5d9d9;
             border-radius: 9px;
-            padding: 5px;
-            font-size: 14px;
+            padding: 5px 10px;
+            font-size: 12px;
             cursor: pointer;
         }
+
         .languagediv button:hover {
             background-color: #f7fafa;
         }
+
         .languagediv img {
-            width: 20px;
-            margin-right: 5px;
+            width: 16px;
+            margin-right: 3px;
         }
+
         .login-icon {
-            margin-left: 20px;
-            width: 1700px; /* Increased login icon size */
+            width: 40px;
             cursor: pointer;
         }
-        .container {
-            width: min(100%, 1440px);
-            margin: 40px auto;
-            padding: 40px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
+
         .message-icon {
             position: fixed;
             bottom: 20px;
@@ -103,7 +90,11 @@
             height: 50px;
             cursor: pointer;
         }
+
     </style>
+
+    {% block css %}
+    {% endblock %}
 </head>
 <body>
     <header>
@@ -134,7 +125,7 @@
         {% block content %}{% endblock %}
     </div>
 
-    <img src="{{ url_for('static', filename='messege.png') }}" alt="Contact Us" class="message-icon" onclick="goToContact()">
+    <img src="{{ url_for('static', filename='message.png') }}" alt="Contact Us" class="message-icon" onclick="goToContact()">
 
     <script>
         function goToContact() {
